force-app/main/default/objects/FOB_GSS__c/FOB_GSS__c.object-meta.xml
<CustomObject>
    <label>FOB GSS</label>
    <nameField>
        <displayFormat>FOBGSS-{00000000}</displayFormat>
        <label>FOB GSS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FOB GSSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>