force-app/main/default/objects/FOB_GSS__c/fields/Actual_Factory_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Factory_Finish_Date__c</fullName>
    <label>Actual Factory Finish Date</label>
    <type>Date</type>
</CustomField>