force-app/main/default/objects/FOB_GSS__c/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <label>Container Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>