force-app/main/default/objects/FOB_GSS__c/fields/Request_Factory_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Factory_Finish_Date__c</fullName>
    <label>Request Factory Finish Date</label>
    <type>Date</type>
</CustomField>